added e2e selenium and update html files

--- a/templates/score.html
+++ b/templates/score.html
@@ -4,7 +4,7 @@
         <title>Scores Game</title>
         </head>
         <body>
-        <body>
-        <h1><div id="score" style="color:blue">Your Score Is : {{value}}</div></h1>
+        <h1><div> id="score" style="color:blue">Your Score Is :</div></h1>
+        <h1><div> id="score2" style="color:blue" > {{value}}</div></h1>
         </body>
 </html>
