changes to html
changes to html

--- a/templates/score.html
+++ b/templates/score.html
@@ -3,8 +3,8 @@
         <head><link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
         <title>Scores Game</title>
         </head>
-        <body>
-        <h1><div> id="score" style="color:blue">Your Score Is :</div></h1>
-        <h1><div> id="score2" style="color:blue" > {{value}}</div></h1>
+       <body>
+        <h1><div id="score" style="color:blue">Your Score Is :</div></h1>
+        <h1><div id="score2" style="color:blue"> {{value}}</div></h1>
         </body>
 </html>
