--- a/templates/error.html
+++ b/templates/error.html
@@ -4,6 +4,6 @@
         <title>Scores Game</title>
         </head>
         <body>
-        <h1><div> id="score" style="color:red">{ERROR}</div></h1>
+        <h1><div id="score" style="color:red">{ERROR}</div></h1>
         </body>
 </html>
